# Travel_Agent

./: .gitignore  README.md  main.py  pyproject.toml
api/: main.py  models.py
api/routes/: chat.py  sessions.py
data/: 5D_nubra_pangong_triangle.json  8D_manali_leh.json  packages.json
data/travel/bike/: cost.json
data/travel/bike/itenaries/: 10D_zanskar_leh.json  4D_leh_kardungla.json  4D_manali.json  5D_nubra_pangong.json  6D_kashmir_srinagar.json  6D_leh_nubra_hanle.json  6D_leh_sham_pangong.json  6D_leh_turtuk.json  6D_manali_spiti.json  7D_leh_lakes.json  7D_leh_manali.json  7D_leh_nubra_hanle.json  8D_leh_tso_moriri_manali.json  8D_leh_turtuk_hanle.json  8D_leh_umlingla.json  8D_manali_leh.json  8D_srinagar_leh.json  9D_leh_to_srinagar.json  9D_srinagar_leh_manali.json
data/travel/car/itenaries/: 4D_pangong_sham_wonders.json  8D_manali_leh.json
etl/: convert_cost.py  script.sh
etl/cost_excel/: cost_bike.xlsx
tourist_agent/: booking_db.py  data_loader.py  graph.py  memory_store.py  nodes.py  state.py  test.py  tools.py  tracing.py  utils.py
tourist_agent/planner/: graph.py  nodes.py  state.py
